Exclude Rakefile namespaces from BlockLength cop
These group together lots of separate tasks, and are more akin to a
class than a method

--- a/.rubocop_base.yml
+++ b/.rubocop_base.yml
@@ -60,6 +60,8 @@ Style/TrailingCommaInArrayLiteral:
 # for the tests.
 Metrics/BlockLength:
   Max: 10
+  ExcludedMethods:
+    - 'namespace'
   Exclude:
     - 'spec/**/*'
     - 't/**/*'
